# urban-flow

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
backend/: __init__.py  config.py
backend/api/: __init__.py  routes.py  websocket.py
backend/simulation/: __init__.py  engine.py  grid.py  metrics.py  pathfinder.py  traffic_light.py  vehicle.py
backend/tests/: __init__.py  test_api.py  test_engine.py  test_grid.py  test_pathfinder.py  test_traffic_light.py  test_vehicle.py
docs/: architecture.md  decisions.md  design-decisions.md  requirements.md  tasks.md
prompts/: implementation.md  principal-architect.md  product-owner.md  senior_developer_backend.md  tester.md
src/urban_flow/: __init__.py
src/urban_flow/ai/: __init__.py
src/urban_flow/api/: __init__.py
src/urban_flow/config/: __init__.py  settings.py
src/urban_flow/core/: __init__.py  grid.py  intersection.py  road.py  signal.py  types.py  vehicle.py
src/urban_flow/emergency/: __init__.py  detector.py  preemption.py  router.py
src/urban_flow/engine/: __init__.py  clock.py  events.py  simulator.py  spawner.py
src/urban_flow/metrics/: __init__.py  collector.py  reporter.py
src/urban_flow/signals/: __init__.py  adaptive.py  controller.py  fixed_time.py
